--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "validator": "^13.9.0"
   }
 }
