--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0",
-    "validator": "^13.9.0"
+    "mongoose": "^7.1.0"
   }
 }
